--- a/src/pages/temoignages/temoignage-sophie-transformation-glp1.astro
+++ b/src/pages/temoignages/temoignage-sophie-transformation-glp1.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
 ---
 
 <BaseLayout 
@@ -628,3 +628,5 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 </style>
 
 </BaseLayout>
+
+
