--- a/src/pages/_utils/diagnostic-live-content-backup.astro
+++ b/src/pages/_utils/diagnostic-live-content-backup.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
 ---
 
 <BaseLayout 
@@ -121,3 +121,5 @@ import BaseLayout from '../layouts/BaseLayout.astro';
     </div>
   </div>
 </BaseLayout>
+
+
