--- a/src/pages/collections/medecins-glp1-france/[slug].astro
+++ b/src/pages/collections/medecins-glp1-france/[slug].astro
@@ -1,5 +1,5 @@
 ---
-import ArticleLayout from '../../layouts/ArticleLayout.astro';
+import ArticleLayout from '../../../layouts/ArticleLayout.astro';
 import { getCollection } from 'astro:content';
 
 export async function getStaticPaths() {
