--- a/src/pages/guides/experts.astro
+++ b/src/pages/guides/experts.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
 import fs from 'fs';
 import path from 'path';
 
@@ -374,3 +374,5 @@ try {
     }
   }
 </style>
+
+
