--- a/src/pages/guides/nouveaux-medicaments-perdre-poids.astro
+++ b/src/pages/guides/nouveaux-medicaments-perdre-poids.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
 ---
 
 <BaseLayout 
@@ -1154,3 +1154,5 @@ import BaseLayout from '../layouts/BaseLayout.astro';
     }
   </style>
 </BaseLayout>
+
+
