--- a/src/pages/guides/qu-est-ce-que-glp1.astro
+++ b/src/pages/guides/qu-est-ce-que-glp1.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
 ---
 
 <BaseLayout 
@@ -552,3 +552,5 @@ import BaseLayout from '../layouts/BaseLayout.astro';
     }
   </style>
 </BaseLayout>
+
+
